--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </colgroup>
 
         <!-- Adds a table header, inside one row that has 7 heading cells containing the abbreviations for the weekdays.
-        7. Adds a table body with five rows and seven data cells within each row, within each table cell there is an h1 heading and description list.-->
+        Adds a table body with five rows and seven data cells within each row, within each table cell there is an h1 heading and description list.-->
 
         <thead>
             <tr>
@@ -132,7 +132,7 @@
                         <dd>$24/$32/$48</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Sat, Feb 3, 2018">
                     <h1>3</h1>
                     <dl>
                         <dt>Joey Gallway</dt>
@@ -143,7 +143,7 @@
             </tr>
 
             <tr>
-                <td>
+                <td data-date="Sun, Feb 4, 2018">
                     <h1>4</h1>
                     <dl>
                         <dt>Carson Quartet</dt>
@@ -151,10 +151,10 @@
                         <dd>$12</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Mon, Feb 5, 2018">
                     <h1>5</h1>
                 </td>
-                <td>
+                <td data-date="Tue, Feb 6, 2018">
                     <h1>6</h1>
                     <dl>
                         <dt>Ralph Williams</dt>
@@ -162,10 +162,10 @@
                         <dd>$24/$36/$42</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Wed, Feb 7, 2018">
                     <h1>7</h1>
                 </td>
-                <td>
+                <td data-date="Thu, Feb 8, 2018">
                     <h1>8</h1>
                     <dl>
                         <dt>West Side Story</dt>
@@ -173,7 +173,7 @@
                         <dd>$36/$48/$64</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Fri, Feb 9, 2018">
                     <h1>9</h1>
                     <dl>
                         <dt>West Side Story</dt>
@@ -181,7 +181,7 @@
                         <dd>$36/$48/$64</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Sat, Feb 10, 2018">
                     <h1>10</h1>
                     <dl>
                         <dt>West Side Story</dt>
@@ -192,7 +192,7 @@
             </tr>
 
             <tr>
-                <td>
+                <td data-date="Sun, Feb 11, 2018">
                     <h1>11</h1>
                     <dl>
                         <dt>Carson Quartet</dt>
@@ -200,13 +200,13 @@
                         <dd>$12</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Mon, Feb 12, 2018">
                     <h1>12</h1>
                 </td>
-                <td>
+                <td data-date="Tue, Feb 13, 2018">
                     <h1>13</h1>
                 </td>
-                <td>
+                <td data-date="Wed, Feb 14, 2018">
                     <h1>14</h1>
                     <dl>
                         <dt>Chamberlain Symphony</dt>
@@ -214,10 +214,10 @@
                         <dd>$18/$24/$32</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Thu, Feb 15, 2018">
                     <h1>15</h1>
                 </td>
-                <td>
+                <td data-date="Fri, Feb 16, 2018">
                     <h1>16</h1>
                     <dl>
                         <dt>Edwin Drood</dt>
@@ -225,7 +225,7 @@
                         <dd>$36/$48/$58</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Sat, Feb 17, 2018">
                     <h1>17</h1>
                     <dl>
                         <dt>Edwin Drood</dt>
@@ -236,7 +236,7 @@
             </tr>
 
             <tr>
-                <td>
+                <td data-date="Sun, Feb 18, 2018">
                     <h1>18</h1>
                     <dl>
                         <dt>Carson Quartet</dt>
@@ -244,13 +244,13 @@
                         <dd>$12</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Mon, Feb 19, 2018">
                     <h1>19</h1>
                 </td>
-                <td>
+                <td data-date="Tue, Feb 20, 2018">
                     <h1>20</h1>
                 </td>
-                <td>
+                <td data-date="Wed, Feb 21, 2018">
                     <h1>21</h1>
                     <dl>
                         <dt>Jazz Masters</dt>
@@ -258,10 +258,10 @@
                         <dd>$18/$24/$32</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Thu, Feb 22, 2018">
                     <h1>22</h1>
                 </td>
-                <td>
+                <td data-date="Fri, Feb 23, 2018">
                     <h1>23</h1>
                     <dl>
                         <dt>The Yearling</dt>
@@ -269,7 +269,7 @@
                         <dd>$12/$18/$24</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Sat, Feb 24, 2018">
                     <h1>24</h1>
                     <dl>
                         <dt>An Ellington Tribute</dt>
@@ -280,7 +280,7 @@
             </tr>
 
             <tr>
-                <td>
+                <td data-date="Sun, Feb 25, 2018">
                     <h1>25</h1>
                     <dl>
                         <dt>Carson Quartet</dt>
@@ -288,13 +288,13 @@
                         <dd>$12</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Mon, Feb 26, 2018">
                     <h1>26</h1>
                 </td>
-                <td>
+                <td data-date="Tue, Feb 27, 2018">
                     <h1>27</h1>
                 </td>
-                <td>
+                <td data-date="Wed, Feb 28, 2018">
                     <h1>28</h1>
                     <dl>
                         <dt>Madtown Jugglers</dt>
@@ -302,7 +302,7 @@
                         <dd>$12/$16/$20</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Fri, Mar 1, 2018">
                     <h1>1</h1>
                     <dl>
                         <dt>Othello</dt>
@@ -310,7 +310,7 @@
                         <dd>$24/$36/$48</dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Sat, Mar 2, 2018">
                     <h1>2</h1>
                     <dl>
                         <dt>Othello</dt>
@@ -318,7 +318,7 @@
                         <dd>$24/$36/$48 </dd>
                     </dl>
                 </td>
-                <td>
+                <td data-date="Sun, Mar 3, 2018">
                     <h1>3</h1>
                     <dl>
                         <dt>Othello</dt>
